update base image to full just in case.. its bigger, but this will prevent some potential issues in the future

--- a/PLSQL/docker-compose.yml
+++ b/PLSQL/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   oracle:
-    image: gvenzl/oracle-xe
+    image: gvenzl/oracle-xe:full
     container_name: db4_oracle
     restart: unless-stopped
     environment:
